--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ let number = '55'
  }
 
  // Practice 7
- let age = 67
+ let age = 17
  let livingLocation = 'north'
  if (age < 18 && livingLocation === 'north') {
     console.log('you are a kid')
@@ -87,8 +87,9 @@ let number = '55'
  }
  else if(age > 19 && age < 65 && livingLocation === 'middle') {
   console.log('you are an adult')
+  console.log('no comment')
  }
- else if(age > 65 && livingLocation === 'middle') {
+ else if(age > 65 && livingLocation === 'north') {
  console.log('you are a senior citizen')
  }
 console.log('no comment')
@@ -100,7 +101,6 @@ if (num % 3 === 0 || num % 4 === 0) {
 } else {
     console.log(`${num} cannot be divided by 3 or 4`)
 }
-
 
 </script>
 </body>
