--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ let number = '55'
  }
 
  // Practice 7
- let age = 17
+ let age = 18
  let livingLocation = 'north'
  if (age < 18 && livingLocation === 'north') {
     console.log('you are a kid')
@@ -91,9 +91,8 @@ let number = '55'
  }
  else if(age > 65 && livingLocation === 'north') {
  console.log('you are a senior citizen')
+ console.log('no comment2')
  }
-console.log('no comment2')
-
 // Practice 8
 let num = 24; // Change this to any number you want to test
 
@@ -108,14 +107,14 @@ function checkStringLength(inputString) {
     return inputString.length > 5;
 }
 
-// Test the function
-console.log(checkStringLength("Helloworld"));       // Output: false
-console.log(checkStringLength("JS"));  // Output: true
+// Test
+console.log(checkStringLength("Hello"));       // Output: false
+console.log(checkStringLength("Javascript"));  // Output: true
 
 //HOMEWORK 2
 function checkNumber(num) {
     if (isNaN(num)) {
-        return "Invalid input";
+        return "LoMisparGever";
     } else if (num % 2 === 0) {
         return "Even";
     } else {
